fix(Modal): Add option for modal title wrapping
Also automatically truncates long words

--- a/packages/forma-36-react-components/src/components/Modal/ModalHeader/ModalHeader.css
+++ b/packages/forma-36-react-components/src/components/Modal/ModalHeader/ModalHeader.css
@@ -21,4 +21,10 @@
   font-family: var(--font-stack-primary);
   font-size: 1rem;
   line-height: var(--line-height-default);
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.ModalHeader__title--is-not-wrapped {
+  white-space: nowrap;
 }
